Ejemplo04_Colecciones-copy/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files\BlueJ\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
11
-classpath
C:\Program Files\BlueJ\lib\bluejcore.jar;C:\Program Files\BlueJ\lib\junit-jupiter-5.5.2.jar;C:\Program Files\BlueJ\lib\junit-jupiter-api-5.5.2.jar;C:\Program Files\BlueJ\lib\junit-jupiter-engine-5.5.2.jar;C:\Program Files\BlueJ\lib\junit-jupiter-migrationsupport-5.5.2.jar;C:\Program Files\BlueJ\lib\junit-jupiter-params-5.5.2.jar;C:\Program Files\BlueJ\lib\junit-platform-commons-1.5.2.jar;C:\Program Files\BlueJ\lib\junit-platform-console-1.5.2.jar;C:\Program Files\BlueJ\lib\junit-platform-console-standalone-1.5.2.jar;C:\Program Files\BlueJ\lib\junit-platform-engine-1.5.2.jar;C:\Program Files\BlueJ\lib\junit-platform-launcher-1.5.2.jar;C:\Program Files\BlueJ\lib\junit-platform-reporting-1.5.2.jar;C:\Program Files\BlueJ\lib\junit-platform-runner-1.5.2.jar;C:\Program Files\BlueJ\lib\junit-platform-suite-api-1.5.2.jar;C:\Program Files\BlueJ\lib\junit-platform-testkit-1.5.2.jar;C:\Program Files\BlueJ\lib\junit-quickcheck-core-0.9.jar;C:\Program Files\BlueJ\lib\junit-vintage-engine-5.5.2.jar;C:\Program Files\BlueJ\lib\hamcrest-core-1.3.jar;C:\Program Files\BlueJ\lib\hamcrest-library-1.3.jar;C:\Program Files\BlueJ\lib\lang-stride.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.base.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.controls.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.fxml.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.graphics.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.media.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.properties.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.swing.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.web.jar;D:\PC_CD\VID\Apr_Aut\UIS_Min_Tic_2022_Programar\Ciclo_2\Java_2022_2_2511_H29_Presencial\MinTic2022_UIS_Ciclo_2_Java_062022\Ejemplo04_Coleciones
-d
D:\PC_CD\VID\Apr_Aut\UIS_Min_Tic_2022_Programar\Ciclo_2\Java_2022_2_2511_H29_Presencial\MinTic2022_UIS_Ciclo_2_Java_062022\Ejemplo04_Coleciones\doc
-encoding
UTF-8
-charset
UTF-8
D:\PC_CD\VID\Apr_Aut\UIS_Min_Tic_2022_Programar\Ciclo_2\Java_2022_2_2511_H29_Presencial\MinTic2022_UIS_Ciclo_2_Java_062022\Ejemplo04_Coleciones\com\ditamex\data\Cliente.java
<---- end of javadoc command ---->
Loading source file D:\PC_CD\VID\Apr_Aut\UIS_Min_Tic_2022_Programar\Ciclo_2\Java_2022_2_2511_H29_Presencial\MinTic2022_UIS_Ciclo_2_Java_062022\Ejemplo04_Coleciones\com\ditamex\data\Cliente.java...
D:\PC_CD\VID\Apr_Aut\UIS_Min_Tic_2022_Programar\Ciclo_2\Java_2022_2_2511_H29_Presencial\MinTic2022_UIS_Ciclo_2_Java_062022\Ejemplo04_Coleciones\com\ditamex\data\Cliente.java:32: error: illegal start of type
}
^
1 error
